--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,8 @@
     <string name="app_name">Github Search User</string>
 
     <string name="app_name2">Detail User</string>
+    <string name="app_name3">Favourite User</string>
+    <string name="app_name4">Setting</string>
     <string name="search">Search</string>
     <string name="search_hint">Masukkan username..</string>
     <string name="result_main">Total result : %d data</string>
@@ -10,10 +12,12 @@
     <string name="avatar">Avatar</string>
     <string name="tab_text_1">%d Following</string>
     <string name="tab_text_2">%d Followers</string>
+    <string name="share">github.com/%s</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="repository">%d Repository</string>
     <string name="favorite">Favorite</string>
     <string name="setting">Setting</string>
     <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="save_favourite">Save Favourite</string>
+    <string name="dark_mode">Dark Mode</string>
 </resources>
